--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
 
+env:
+  TF_IN_AUTOMATION: true
+  TF_VAR_gh_token: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   defaults:
     runs-on: ubuntu-latest
