--- a/.envrc
+++ b/.envrc
@@ -9,3 +9,5 @@ if ! use flake . --impure
 then
   echo "devenv could not be built. The devenv environment was not loaded. Make the necessary changes to devenv.nix and hit enter to try again." >&2
 fi
+
+export TF_VAR_gh_token="<your-token>"
