ci: exit => exitcode
https://github.com/GetTerminus/terraform-pr-commenter/pull/30

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,4 +79,4 @@ jobs:
         with:
           commenter_type: plan
           commenter_plan_path: tf_plan.txt
-          commenter_exitcode: ${{ steps.plan.outputs.exit }}
+          commenter_exitcode: ${{ steps.plan.outputs.exitcode }}
