ci: Switch back to official CI

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,8 +6,6 @@ on:
 env:
   TF_IN_AUTOMATION: true
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  TF_WORKSPACE: "example"
-  TF_VERSION: "1.6.4"
   TF_VAR_gh_token: ${{ secrets.GITHUB_TOKEN }}
   TF_VAR_billing_email: ${{ secrets.TF_VAR_billing_email }}
 
@@ -15,68 +13,87 @@ jobs:
   terraform:
     name: Run Terraform and Comment
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ env.tf_actions_working_dir }}
+    permissions:
+      pull-requests: write
     steps:
-      - name: HashiCorp - Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
-      - name: Terraform Format
+      - uses: actions/checkout@v3
+      - uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform fmt
         id: fmt
-        run: |
-          terraform fmt -check -recursive -diff
+        run: terraform fmt -check
         continue-on-error: true
-      - name: Post Format Comment
-        if: ${{ always() && (steps.fmt.outcome == 'success' || steps.fmt.outcome == 'failure') }}
-        uses: GetTerminus/terraform-pr-commenter@v3
-        with:
-          commenter_type: fmt
-          commenter_input: ${{ format('{0}{1}', steps.fmt.outputs.stdout, steps.fmt.outputs.stderr) }}
-          commenter_exitcode: ${{ steps.fmt.outputs.exitcode }}
+
       - name: Terraform Init
         id: init
-        run: terraform init -lock=false -input=false
-      - name: Post Init Comment
-        if: ${{ always() && (steps.init.outcome == 'success' || steps.init.outcome == 'failure') }}
-        uses: GetTerminus/terraform-pr-commenter@v3
-        with:
-          commenter_type: init
-          commenter_input: ${{ format('{0}{1}', steps.init.outputs.stdout, steps.init.outputs.stderr) }}
-          commenter_exitcode: ${{ steps.init.outputs.exitcode }}
+        run: terraform init
+
       - name: Terraform Validate
         id: validate
-        run: terraform validate
-      - name: Post TF Validate Comment
-        if: ${{ always() && (steps.validate.outcome == 'success' || steps.validate.outcome == 'failure') }}
-        uses: GetTerminus/terraform-pr-commenter@v3
-        with:
-          commenter_type: validate
-          commenter_input: ${{ format('{0}{1}', steps.validate.outputs.stdout, steps.validate.outputs.stderr) }}
-          commenter_exitcode: ${{ steps.validate.outputs.exitcode }}
-      - name: TFLint - Setup
-        uses: terraform-linters/setup-tflint@v3
-        with:
-          tflint_wrapper_enabled: true
-      - name: TFLint - Run
-        id: tflint
-        run: |
-          tflint --version
-          tflint --init
-          tflint
-      - name: Post TFLint Comment
-        if: ${{ always() && (steps.tflint.outcome == 'success' || steps.tflint.outcome == 'failure') }}
-        uses: GetTerminus/terraform-pr-commenter@dpr-update-commenter
-        with:
-          commenter_type: tflint
-          commenter_input: ${{ format('{0}{1}', steps.tflint.outputs.stdout, steps.tflint.outputs.stderr) }}
-          commenter_exitcode: ${{ steps.tflint.outputs.exitcode }}
+        run: terraform validate -no-color
+
       - name: Terraform Plan
         id: plan
-        run: terraform plan -lock=false -input=false |& tee tf_plan.txt
-      - uses: GetTerminus/terraform-pr-commenter@v3
+        run: terraform plan -no-color
+        continue-on-error: true
+
+      - uses: actions/github-script@v6
+        if: github.event_name == 'pull_request'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_WORKSPACE: ${{ inputs.terraform_workspace }}
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
-          commenter_type: plan
-          commenter_plan_path: tf_plan.txt
-          commenter_exitcode: ${{ steps.plan.outputs.exitcode }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            // 1. Retrieve existing bot comments for the PR
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            })
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes('Terraform Format and Style')
+            })
+
+            // 2. Prepare format of the comment
+            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+            <details><summary>Validation Output</summary>
+
+            \`\`\`\n
+            ${{ steps.validate.outputs.stdout }}
+            \`\`\`
+
+            </details>
+
+            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+
+            <details><summary>Show Plan</summary>
+
+            \`\`\`\n
+            ${process.env.PLAN}
+            \`\`\`
+
+            </details>
+
+            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
+
+            // 3. If we have a comment, update it, otherwise create a new one
+            if (botComment) {
+              github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
+              })
+            } else {
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              })
+            }
