--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# Devenv
 .devenv
+.pre-commit-config.yaml
 # https://github.com/github/gitignore/blob/main/Terraform.gitignore
 # Local .terraform directories
 **/.terraform/*
