Add initial for_each with pipelines
Co-authored-by: gwright99 <gwright99@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Devenv
 .devenv
 .pre-commit-config.yaml
+!terraform.tfvars
 # https://github.com/github/gitignore/blob/main/Terraform.gitignore
 # Local .terraform directories
 **/.terraform/*
