--- a/.github/renovate/default.json5
+++ b/.github/renovate/default.json5
@@ -1,6 +1,6 @@
 {
     $schema: "https://docs.renovatebot.com/renovate-schema.json",
-    extends: ["config:best-practices"],
+    extends: ["config:best-practices", ":automergeDigest", ":automergeBranch"],
     vulnerabilityAlerts: {
         labels: ["security"],
         schedule: "at any time",
