Group updates to github action deps into one PR to reduce noise

--- a/.github/renovate/default.json5
+++ b/.github/renovate/default.json5
@@ -54,5 +54,9 @@
             matchDatasources: ["docker"],
             registryUrls: ["quay.io"],
         },
+        {
+            "matchPackagePatterns": ["^actions/"],
+            "groupName": "GitHub Actions"
+        }
     ],
 }
