improve matching rule, add schedule and automerge

--- a/.github/renovate/default.json5
+++ b/.github/renovate/default.json5
@@ -55,8 +55,10 @@
             registryUrls: ["quay.io"],
         },
         {
-            "matchPackagePatterns": ["^actions/"],
-            "groupName": "GitHub Actions"
+            matchManagers: ["github-actions"],
+            groupName: "GitHub Actions",
+            automerge: true,
+            schedule: ["before 9am"],
         }
     ],
 }
