Group updates to github action deps into one PR to reduce noise (#34)
* Group updates to github action deps into one PR to reduce noise

* improve matching rule, add schedule and automerge

--- a/.github/renovate/default.json5
+++ b/.github/renovate/default.json5
@@ -54,5 +54,11 @@
             matchDatasources: ["docker"],
             registryUrls: ["quay.io"],
         },
+        {
+            matchManagers: ["github-actions"],
+            groupName: "GitHub Actions",
+            automerge: true,
+            schedule: ["before 9am"],
+        }
     ],
 }
