--- a/pulumi/aws_license-server/Pulumi.yaml
+++ b/pulumi/aws_license-server/Pulumi.yaml
@@ -6,13 +6,13 @@ runtime:
 config:
   aws:region:
     value: "eu-west-1"
-  licsrvr_fqdn:
+  licsrvrFqdn:
     value: ""
-  license_s3_uri:
+  licenseS3Uri:
     value: ""
-  kms_key:
+  kmsKey:
     value: ""
-  sentieon_version:
+  sentieonVersion:
     value: "202308.01"
   locals:license_bucket_arn:
     # format("arn:aws:s3:::%s", split("/", var.license_s3_uri)[2])
