--- a/.github/renovate/default.json5
+++ b/.github/renovate/default.json5
@@ -12,7 +12,7 @@
     dependencyDashboardTitle: "Renovate Dashboard 🤖",
     suppressNotifications: ["prIgnoreNotification"],
     rebaseWhen: "conflicted",
-    reviewers: ["team:modules"],
+    reviewers: ["edmundmiller"],
     assigneesFromCodeOwners: true,
     gitAuthor: "nf-core-bot <renovate@nf-co.re>",
     "pre-commit": {
