--- a/.github/renovate/default.json5
+++ b/.github/renovate/default.json5
@@ -15,40 +15,9 @@
     reviewers: ["edmundmiller"],
     assigneesFromCodeOwners: true,
     gitAuthor: "nf-core-bot <renovate@nf-co.re>",
-    "pre-commit": {
+    pre-commit: {
         enabled: true,
     },
-    customManagers: [
-        {
-            customType: "regex",
-            description: "Process Containers dependencies",
-            fileMatch: ["(^|/)main\\.nf$"],
-            matchStrings: [
-                "\\s+'(?<depName>\\S+):(?<currentValue>.*\\-.*)' }\"\n",
-            ],
-            datasourceTemplate: "docker",
-        },
-        {
-            customType: "regex",
-            description: "Upgrade conda dependencies",
-            fileMatch: ["(^|/)environment(.*).ya?ml$"],
-            matchStrings: [
-                "#\\s*renovate\\s+datasource=conda\\s+depName=(?<depName>.*?)\\s+-\\s*[\\w-]+\\s*==?\\s*\"?(?<currentValue>.*)\"?",
-                "# renovate: datasource=conda depName=(?<depName>.*?)\\s+-\\s*[\\w-]+\\s*==?\\s*\"?(?<currentValue>.*)\"?"
-            ],
-            datasourceTemplate: "conda"
-        },
-        {
-            customType: "regex",
-            description: "Upgrade pypi dependencies inside conda environment files",
-            fileMatch: ["(^|/)environment(.*).ya?ml$"],
-            matchStrings: [
-                "# renovate datasource=pypi\\s+-\\s*(?<depName>[\\w-]+)\\s*(\\[[\\w,\\s]+\\])?\\s*==?\\s*(?<currentValue>.*)",
-                "# renovate: datasource=pypi\\s+-\\s*(?<depName>[\\w-]+)\\s*(\\[[\\w,\\s]+\\])?\\s*==?\\s*(?<currentValue>.*)"
-            ],
-            datasourceTemplate: "pypi"
-        },
-    ],
     packageRules: [
         {
             matchDatasources: ["docker"],
