ci: Update package rules from modules

--- a/.github/renovate/default.json5
+++ b/.github/renovate/default.json5
@@ -27,6 +27,7 @@
             matchManagers: ["github-actions"],
             groupName: "GitHub Actions",
             automerge: true,
+            schedule: ["before 9am"],
         },
         // don't use digest for actions coming from seqera(labs) or nf-core
         {
@@ -34,6 +35,11 @@
             matchManagers: ["github-actions"],
             automerge: true,
             pinDigest: false,
+        },
+        {
+            matchPackagePatterns: ["renovate-config-validator"],
+            automerge: true,
+            schedule: ["before 9am on Monday"],
         },
     ],
 }
