--- a/pulumi/AWSMegatests/Pulumi.yaml
+++ b/pulumi/AWSMegatests/Pulumi.yaml
@@ -7,4 +7,4 @@ description: Pulling in the infrastructure that was pre-infra-as-code
 config:
   pulumi:tags:
     value:
-      pulumi:template: ""
+      pulumi:template: aws-native-python
