--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,8 @@ repos:
           - types-jsonschema
           - types-Markdown
           - types-setuptools
+
+  - repo: https://github.com/renovatebot/pre-commit-hooks
+    rev: 37.426.0
+    hooks:
+      - id: renovate-config-validator
