Apply suggestions from code review
Co-authored-by: Matthias Hörtenhuber <mashehu@users.noreply.github.com>

--- a/pulumi/github/repos/Pulumi.yaml
+++ b/pulumi/github/repos/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: python
   options:
     virtualenv: venv
-description: Managing GitHub repos
+description: Managing nf-core GitHub repos
