--- a/.github/workflows/repos.yml
+++ b/.github/workflows/repos.yml
@@ -41,6 +41,7 @@ jobs:
 
       - name: Install Python
         uses: actions/setup-python@v5
+        cache: 'pip'
 
       - run: pip install -r requirements.txt
         working-directory: ${{ env.PULUMI_WORKING_DIRECTORY }}
@@ -61,15 +62,3 @@ jobs:
           stack-name: ${{ env.PULUMI_STACK_NAME }}
           work-dir: ${{ env.PULUMI_WORKING_DIRECTORY }}
 
-      # If you'd like to run your Pulumi application outside of the official GitHub Action
-
-      #- name: Install Pulumi CLI
-      #  uses: pulumi/setup-pulumi@v2
-
-      #- name: PR previews
-      #  run: pulumi preview -s $PULUMI_STACK_NAME --cwd $PULUMI_WORKING_DIRECTORY
-      #  if: ${{ github.event_name == 'pull_request' }}
-
-      #- name: Apply infrastructure update
-      #  run: pulumi update --yes -s $PULUMI_STACK_NAME --cwd $PULUMI_WORKING_DIRECTORY
-      #  if: ${{ github.event_name == 'push' }}
