feat: Add download_hf

--- a/stats/steampipe/.envrc
+++ b/stats/steampipe/.envrc
@@ -4,3 +4,4 @@ eval "$(pixi shell-hook)"
 # export OP_ACCOUNT="nf-core"
 export TWITTER_BEARER_TOKEN=$(op read "op://Private/Twitter Bearer Token/credential")
 export GITHUB_TOKEN=$(op read "op://Private/GitHub Personal Access Token/token")
+export HF_TOKEN=$(op read "op://Private/Hugging Face API Token/user access token")
