Add upload_hf task

--- a/stats/steampipe/pixi.toml
+++ b/stats/steampipe/pixi.toml
@@ -8,9 +8,10 @@ version = "0.1.0"
 
 [tasks]
 plugins = "steampipe plugin install github twitter"
-twitter = "steampipe query twitter_users.sql --output json | jq '.rows[0] + {timestamp: now|tostring}' >> twitter_users.json"
-github = "steampipe query github.sql --output json | jq '.rows[0] + {timestamp: now|tostring}' >> github.json"
+twitter = "steampipe query twitter_users.sql --output json | jq '.rows[0] + {timestamp: now|tostring}' >> hf_stats/steampipe/twitter_users.json"
+github = "steampipe query github.sql --output json | jq '.rows[0] + {timestamp: now|tostring}' >> hf_stats/steampipe/github.json"
 download_hf = "huggingface-cli download nf-core/stats --local-dir hf_stats --repo-type dataset --quiet"
+upload_hf = "huggingface-cli upload nf-core/stats hf_stats --repo-type dataset --quiet"
 
 [dependencies]
 steampipe = ">=0.23.5,<0.24"
