--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -11,11 +11,7 @@ on:
     types: [update-website]
 
 env:
-  # TWITTER_BEARER_TOKEN: TODO
-  TWITTER_CONSUMER_KEY: ${{secrets.TWITTER_CONSUMER_KEY}}
-  TWITTER_CONSUMER_SECRET: ${{secrets.TWITTER_CONSUMER_SECRET}}
-  TWITTER_ACCESS_TOKEN: ${{secrets.TWITTER_ACCESS_TOKEN}}
-  TWITTER_ACCESS_TOKEN_SECRET: ${{secrets.TWITTER_ACCESS_TOKEN_SECRET}}
+  TWITTER_BEARER_TOKEN: ${{secrets.TWITTER_BEARER_TOKEN}}
   GITHUB_TOKEN: ${{secrets.STEAMPIPE_GH_TOKEN}}
   HF_TOKEN: ${{ secrets.HF_TOKEN }}
 
