--- a/stats/steampipe/.envrc
+++ b/stats/steampipe/.envrc
@@ -1,7 +1,7 @@
 watch_file pixi.lock
 eval "$(pixi shell-hook)"
 
-# export OP_ACCOUNT="nf-core"
-export TWITTER_BEARER_TOKEN=$(op read "op://Private/Twitter Bearer Token/credential")
+# TODO export OP_ACCOUNT="nf-core"
+# TODO export TWITTER_BEARER_TOKEN=$(op read "op://Shared/3yyagrpjil6orirpdr7xslerfi/Bearer token")
 export GITHUB_TOKEN=$(op read "op://Private/GitHub Personal Access Token/token")
 export HF_TOKEN=$(op read "op://Private/Hugging Face API Token/user access token")
