--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -14,6 +14,7 @@ env:
   TWITTER_BEARER_TOKEN: ${{secrets.TWITTER_BEARER_TOKEN}}
   GITHUB_TOKEN: ${{secrets.STEAMPIPE_GH_TOKEN}}
   HF_TOKEN: ${{ secrets.HF_TOKEN }}
+  SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
 
 jobs:
   update:
@@ -33,6 +34,8 @@ jobs:
       - run: pixi run github_hc
         working-directory: ./stats/steampipe/
       - run: pixi run twitter_hc
+        working-directory: ./stats/steampipe/
+      - run: pixi run slack_hc
         working-directory: ./stats/steampipe/
       # TODO - run: pixi run slack
       - run: pixi run upload_hf
